--- a/README
+++ b/README
@@ -1,3 +1,19 @@
 This is a simple theme for OSQA.
 
+This theme was tested on Google Chrome Beta 10.0.648.114 and 
+Firefox 3.6.13 with OSQA Dev Build 775.
 
+Installation instructions:
+
+Assuming you already have osqa installed into a folder named osqa-server:
+
+    cd osqa-server/forum/skins
+    git clone git://github.com/kristi/OSQA_Simplton.git OSQA_Simplton
+    cd ../..
+    vim settings_local.py
+
+Change the value for OSQA_DEFAULT_SKIN:
+
+    OSQA_DEFAULT_SKIN = 'OSQA_Simplton'
+
+Enjoy.
