--- a/README
+++ b/README
@@ -1,9 +1,16 @@
 This is a simple theme for OSQA.
 
+New features:
+-------------------------
+
+* Latex support via MathJax!
+* Fixed editor bug where lists generated garbage in Chrome
+
 This theme was tested on Google Chrome Beta 10.0.648.114 and 
 Firefox 3.6.13 with OSQA Dev Build 775.
 
 Installation instructions:
+-------------------------
 
 Assuming you already have osqa installed into a folder named osqa-server:
 
